--- a/infrastructure/docker/containers/tvheadend/ingress.yml
+++ b/infrastructure/docker/containers/tvheadend/ingress.yml
@@ -26,7 +26,7 @@ tcp:
 
   middlewares:
     tvheadend-ipwhitelist:
-      ipWhiteList:
+      ipAllowList:
         sourceRange:
           - "192.168.0.0/16"
 
