fix(#100): Make sure mounts are present before starting docker service

--- a/infrastructure/libvirt/apps/docker/cloud_init.cfg
+++ b/infrastructure/libvirt/apps/docker/cloud_init.cfg
@@ -41,20 +41,21 @@ fs_setup:
     device: /dev/vdb1
     overwrite: False
 
-# Override this so missing disks lead to failure!
-mount_default_fields: [none, none, "auto","defaults,x-systemd.requires=cloud-init.service", "0", "2"]
-
 mounts:
     - [ "/dev/vdb.1", "/opt/containers" ]
     %{~ for mount in mounts ~}
     - [ ${join(",", formatlist("\"%s\"", mount))} ]
     %{~ endfor ~}
 
-%{~ if length(files) != 0 ~}
 write_files:
+    # SystemD Drop in to make sure docker starts after mounts.
+    # Mount without nofail does not seem to be enough.
+    - path: /lib/systemd/system/docker.service.d/mount.conf
+      content: |
+        [Unit]
+        RequiresMountsFor=/opt/containers %{for mount in mounts} ${ mount[1] } %{endfor}
     %{~ for file in files ~}
     - path: ${file.path}
       content: |
         ${indent(8, file.content)}
     %{~ endfor ~}
-%{~ endif ~}
