--- a/infrastructure/docker/containers/traefik/traefik.yml
+++ b/infrastructure/docker/containers/traefik/traefik.yml
@@ -32,6 +32,9 @@ certificatesResolvers:
       storage: /acme/acme.json
       dnsChallenge:
         provider: cloudflare
+        resolvers:
+          - "1.1.1.1:53"
+          - "1.0.0.1:53"
   %{ else }
   homelab:
     acme:
